-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Internal Code
-
Replication
-
Fully Compatible
-
ALL
-
v8.0
-
Repl 2024-05-13
-
None
-
3
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Using invalid iterator
Undefined behavior may result; the program may crash or subtly misbehave. An invalid or past-the-end iterator is being used
/src/mongo/s/write_ops/bulk_write_exec.cpp:189: INVALIDATE_ITERATOR 140504 Calling "find" with element "response.shardId" returns the end iterator.
/src/mongo/s/write_ops/bulk_write_exec.cpp:189: INVALIDATE_ITERATOR 140504 Assigning: "<temporary>" = "childBatches->find(response.shardId)".
/src/mongo/s/write_ops/bulk_write_exec.cpp:189: INVALIDATE_ITERATOR 140504 Dereferencing iterator "childBatches->find(response.shardId)" though it is already past the end of its container.
- related to
-
SERVER-80481 Handle local errors on mongos encountered when attempting to send bulkWrite sub-batches
-
- Closed
-