SERVER-89719: Fix potential invalid iterator in bulkWrite (#21627)

(cherry picked from commit 88e5a41ea2cbc51ea5ff3f08713fe24dec716371)

GitOrigin-RevId: a02fd7be7f39a5c3c26d2042ca1d25a56d13247f